// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickAreaMobile should set the min height of the click area as passed and set in styles 1`] = `
.c0 {
  height: 100%;
  min-height: 200px;
}

<ClickAreaMobile
  isExpanded={true}
  minHeight={200}
>
  <ClickWrapper
    className="editor-click-wrapper"
    innerRef={
      Object {
        "current": <div
          class="editor-click-wrapper c0"
        />,
      }
    }
    isExpanded={true}
    minHeight={200}
    onClick={[Function]}
  >
    <div
      className="editor-click-wrapper c0"
      onClick={[Function]}
    />
  </ClickWrapper>
</ClickAreaMobile>
`;

exports[`ClickAreaMobile should set the min height of the click area as passed, but not set in styles 1`] = `
.c0 {
  height: 100%;
}

<ClickAreaMobile
  isExpanded={false}
  minHeight={200}
>
  <ClickWrapper
    className="editor-click-wrapper"
    innerRef={
      Object {
        "current": <div
          class="editor-click-wrapper c0"
        />,
      }
    }
    isExpanded={false}
    minHeight={200}
    onClick={[Function]}
  >
    <div
      className="editor-click-wrapper c0"
      onClick={[Function]}
    />
  </ClickWrapper>
</ClickAreaMobile>
`;
